--- a/css/styles.css
+++ b/css/styles.css
@@ -46,31 +46,32 @@ body {
     rgb(85, 230, 240) 50%,
     rgb(16, 46, 51) 100%
   );
-
+  /* background: linear-gradient(90deg, rgba(242, 109, 20, 0.747) 50%,rgba(70, 206, 221, 0.788) 100%)*/
   /* background: linear-gradient(90deg, rgba(151, 12, 12, 0.8) 80%, rgba(51, 51, 51, 0.7) 100%); */
-}
 
-#container {
-  /* background-color: var(--color-fondo-black); */
-  max-width: 1366px;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, auto);
+  & .container {
+    /* background-color: var(--color-fondo-black); */
+    max-width: 1366px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
 
-  box-shadow: rgba(55, 24, 12, 0.84) 10px 0px 25px,
-    rgba(40, 11, 11, 0.8) -10px 0px 25px;
+    /* BOX SHADOW behind the body should be the similar to background color */
+    box-shadow: rgba(8, 83, 106, 0.84) 10px 0px 25px,
+      rgba(5, 34, 45, 0.8) -10px 0px 25px;
+  }
 }
 
 /* ***************************************HEADER**************************************** */
 header {
   background-color: var(--color-fondo-black);
-  color: white;
+  color: var(--color-text-primary);
   height: 80vh;
 
   /*GRID 4 x columns , 5 x rows */
   display: grid;
-  grid-template-columns: [margen].1fr [titulos].6fr [margen].1fr [menuimagen]2fr;
+  grid-template-columns: [margen].2fr [titulos].6fr [margen].2fr [menuimagen]2fr;
   grid-template-rows: [header]5rem [separacion]2fr [texto]repeat(3, auto) [separacion]1fr;
 
   @media (prefers-color-scheme: dark) {
@@ -102,7 +103,7 @@ header {
     background-color: var(--color-fondo-gray-main);
 
     & a {
-      color: white;
+      color: var(--color-text-secondary);
       text-decoration: none;
     }
 
@@ -141,7 +142,7 @@ header {
   & .header__nombre {
     grid-column: 2 / span 3;
     grid-row: 4 / span 1;
-    font-size: 7rem;
+    font-size: var(--tamano-nombre);
   }
 
   & .header__boton {
@@ -152,9 +153,9 @@ header {
     padding: 1.25rem 1.5rem;
     justify-self: left;
 
-    color: #181818;
+    color: var(--color-text-secondary);
     text-decoration: none;
-    /* font-size: 2rem; */
+    font-size: var(--tamano-boton);
     font-weight: 900;
     width: 20rem;
     text-align: center;
@@ -175,11 +176,11 @@ header {
 
 /* *************************************** MAIN **************************************** */
 main {
-  padding: 5rem 7.5rem;
+  padding: 5rem 12.5rem;
 
   /*GRID 4 x columns , 4 x rows */
   display: grid;
-  grid-template-columns: []1fr [].1fr [].5fr [].5fr;
+  grid-template-columns: []1fr [].2fr [].5fr [].5fr;
   grid-template-rows: repeat(2, auto) 1fr;
 
   background-color: var(--color-fondo-white);
@@ -187,6 +188,7 @@ main {
   & .main__imagen {
     grid-column: 1 / span 1;
     grid-row: 1 / span 3;
+    width: 100%;
     box-shadow: var(--sombra);
   }
   & .main__subtitulo {
@@ -207,9 +209,8 @@ main {
       transparent 50%
     );
   }
-  & .main__parrafoarriba,
-  .main__parrafoabajo {
-    padding: 1rem 0;
+  & p {
+    margin: 1rem 0;
   }
 
   & .main__textos {
@@ -221,12 +222,13 @@ main {
 /* *************************************** FOOTER **************************************** */
 footer {
   /* padding: 80px 200px; */
+  padding: 5rem 12.5rem;
   background-color: var(--color-fondo-gray-footer);
 
   & .footer__titulos {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
 
     & .footer__titulo {
       display: flex;
@@ -250,15 +252,21 @@ footer {
     & .footer__menu {
       display: flex;
       justify-content: center;
-      gap: 30px;
-      margin: 30px 0;
+      gap: 1.875rem;
+      margin: 1.875rem 0;
+      list-style: none;
     }
   }
 
   & .footer__galeria {
+    width: 80%;
+    margin: 0 auto;
+
     display: grid;
     justify-content: center;
     grid-template-columns: repeat(3, 15rem);
+    /* RESPONSIVE GRID SYNTAX */
+    /* grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr)); */
     grid-template-rows: repeat(3, 15rem);
     gap: 0.625rem;
 
@@ -266,13 +274,16 @@ footer {
       border-radius: 0.3rem;
       transform: scale(1);
       transition: 0.3s ease-in-out all;
-      filter:sepia(40%);
+      filter: sepia(40%);
+      width: auto;
+      height: 100%;
+      display: block;
     }
     & a:hover {
       border: 10px solid var(--color-yellow);
       border-radius: 100%;
       filter: initial;
-      transform: scale(.95);
+      transform: scale(0.95);
       transition: 1s ease-in-out all;
     }
     & a:nth-child(1) {
@@ -302,11 +313,10 @@ footer {
     & a:nth-child(9) {
       background: url(../img/desktop/person.jpg) no-repeat top center/cover;
     }
-  
   }
 
   & .footer__boton {
-    margin: 50px;
+    margin: 3.125rem;
     display: flex;
     justify-content: center;
 
@@ -317,6 +327,13 @@ footer {
       border-radius: 50px;
       font-weight: 900;
       background-color: var(--color-fondo-black);
+      text-decoration: none;
+      transition: all 0.4s;
+      box-shadow: var(--color-fondo-black) 5px 5px 1rem;
+    }
+    & .footer__loadmore:hover {
+      transform: scale(1.1);
+      transition: all 0.4s;
     }
   }
 }
